<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/app_bar_height_fix"
    android:orientation="vertical"
    tools:context="ca.qc.cstj.cinecheck.cinecheck.fragments.FilmDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:id="@+id/fildet_imgframe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/film_big_img_size">
        <ImageView
            android:id="@+id/fildet_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
    <TextView
        android:id="@+id/fildet_titre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/size_titre"
        android:gravity="center_horizontal"
        android:text="(Film Titre)" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/realisateur" />
        <TextView
            android:id="@+id/fildet_realisateur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="(Film Réalisateur)" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/duree" />
        <TextView
            android:id="@+id/fildet_duree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="(Film Durée)" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/classification" />
        <TextView
            android:id="@+id/fildet_classe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="(Film Classification)" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/genre" />
        <TextView
            android:id="@+id/fildet_genre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="(Film Genre)" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pays" />
        <TextView
            android:id="@+id/fildet_pays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="(Film Pays)" />
    </LinearLayout>

</LinearLayout>
